--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
 </head>
 
 <body>
-    <header class="z-10 absolute top-0 right-0 left-0 w-full flex items-center justify-around px-4 md:px-16 bg-blue-500 bg-opacity-20">
+    <div class="countdown fixed top-28 right-4 md:right-10 flex md:flex-row flex-col items-center text-center gap-5 md:gap-10 z-[999999999] bg-white bg-opacity-50 p-4 md:p-8 rounded-md shadow-md"> 
+        <div>
+            <p class="day">00</p>
+            <h1 class="font-semibold text-lg">Days</h1>
+        </div>
+        <div>
+            <p class="hours">00</p>
+            <h1 class="font-semibold text-lg">Hours</h1>
+        </div>
+        <div>
+            <p class="mins">00</p>
+            <h1 class="font-semibold text-lg">Min</h1>
+        </div>
+        <div>
+            <p class="sec">00</p>
+            <h1 class="font-semibold text-lg">Sec</h1>
+        </div>
+    </div>
+    <header class="z-10 absolute top-0 right-0 left-0 w-full flex items-center justify-around px-4 md:px-16 py-4 bg-blue-500 bg-opacity-20">
         <div class="md:block flex justify-center">
             <div class="flex items-center gap-3">
                 <div>
@@ -29,10 +47,11 @@
         </div>
         <div class="md:hidden block">
             <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-xmark"></i>
         </div>
         <div class="md:block hidden">
             <nav>
-                <ul class="flex items-center gap-8 text-sm font-normal text-white">
+                <ul class="flex items-center text-sm font-normal text-white">
                     <li class="p-3 cursor-pointer"><p>ABOUT</p></li>
                     <li class="p-3 cursor-pointer"><p>SERVICES</p></li>
                     <li class="p-3 cursor-pointer"><p>MINISTRIES</p></li>
@@ -210,6 +229,36 @@
             });
             splide.mount();
         });
+        const dayEl = document.querySelector(".day");
+const hourEL = document.querySelector(".hours");
+const minEL = document.querySelector(".mins");
+const secEL = document.querySelector(".sec");
+
+
+    function countDown() {
+        const futureDate = new Date('5 october 2024');
+        const presentDate = new Date();
+
+        const diff = futureDate - presentDate;
+
+        const seconds = (diff / 1000);
+
+        day = Math.trunc(seconds / 3600 / 24);
+        hour= Math.trunc((seconds / 3600) % 24);
+        min = Math.trunc((seconds / 60) % 60)
+        sec = Math.trunc(seconds % 60);
+
+        dayEl.innerHTML = day;
+        hourEL.innerHTML = formatDate(hour);
+        minEL.innerHTML = min;
+        secEL.innerHTML = formatDate(sec);
+        
+    }
+
+    function formatDate(date) {
+        return date < 10 ? `0${date}` : date;
+    }
+    setInterval(countDown , 1000)
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
 </body>
