--- a/about.html
+++ b/about.html
@@ -147,10 +147,10 @@
 
     <section class="bg-black text-white flex md:flex-row flex-col md:py-40 py-10 px-4 md:px-10">
         <div>
-            <h1 class="anton text-white text-[84px] leading-[92px]">WHAT WILL YOU GET</h1>
+            <h1 class="anton text-white text-[84px] leading-[92px] w-[100px]">WHAT WILL YOU GET</h1>
         </div>
         <div class="flex-1 ">
-            <p class="roboto text-4xl text-[#eeeade] font-ligh">At our church, your spirit will be uplifted through meaningful worship, deep connections with a caring community, and transformative teachings that empower you to live a life of purpose and grace.</p>
+            <p class="roboto text-4xl text-[#eeeade] font-light">At our church, your spirit will be uplifted through meaningful worship, deep connections with a caring community, and transformative teachings that empower you to live a life of purpose and grace.</p>
         </div>
     </section>
 
@@ -167,6 +167,91 @@
             </div>
         </div>
     </section>
+
+    <section class="bg-[url(../images/slide3.jpg)] bg-cover bg-bottom">
+        <div class="md:w-[80%] h-[300px] bg-black flex justify-center items-center">
+            Video
+        </div>
+    </section>
+    <div class="bg-black w-full h-32"></div>
+    <section class="md:px-20 px-10 py-4 bg-gradient-to-b from-[#093650] to-[#141755]">
+        <div>
+            <h1>SPONSORS</h1>
+        </div>
+        <div class="grid items-center lg:grid-cols-4 md:grid-cols-2 grid-cols-1">
+            <h1>PLATINUM PARTNER</h1>
+            <h1>PLATINUM PARTNER</h1>
+            <h1>SILVER PARTNER</h1>
+            <h1>GOLD PARTNER</h1>
+            <h1>GOLD PARTNER</h1>
+            <h1>GOLD PARTNER</h1>
+        </div>
+    </section>
+    <div class="bg-black w-full h-40"></div>
+    <div class="bg-gradient-to-b from-[#093650] to-[#141755]">
+        <section class=" text-white flex md:flex-row flex-col md:gap-20 md:py-40 py-10 px-4 md:px-10"></section>>
+            <div>
+                <h1 class="anton text-white text-[84px] leading-[92px]">THE PLACE</h1>
+                <p class="roboto text-4xl text-[#eeeade] font-ligh">WE ARE ONLINE</p>
+            </div>
+            <div class="flex-1 ">
+                <p class="roboto text-4xl text-[#eeeade] font-light">Everyone can be part of this conference – we’re going virtual! And we will be streaming it on our YouTube</p>
+            </div>
+        </section>
+        <section class="flex items-center divide-x-2 divide-white text-white bg-[#141755] bg-opacity-80 p-2">
+            <p class="flex-1 text-center">PPC2024</p>
+            <p class="flex-1 text-center">AUGUST 11-18, 2024</p>
+            <p class="flex-1 text-center">PPC2024</p>
+            <p class="flex-1 text-center">AUGUST 11-18, 2024</p>
+            <p class="flex-1 text-center">PPC2024</p>
+            <p class="flex-1 text-center">AUGUST 11-18, 2024</p>
+        </section>
+        <section class="min-h-screen flex justify-center items-center">
+            <div class="text-center text-white md:w-[800px] w-full md:py-28 py-10 ">
+                <div class="flex flex-col items-center gap-6">
+                    <h3 class="anton text-white text-[84px] leading-[92px] w-[100px]">BE PART OF THE CONFERENCE</h3>
+                    <p class="roboto text-2xl">Be a Part of Our Community</p>
+                    <div class="flex flex-col gap-10">
+                        <h3 class="anton text-white text-[84px] leading-[92px] w-[100px]">$0.00</h3>
+                        <button class="italic w-fit bg-transparent px-8 py-4 border-2 border-purple-800">GET TICKETS</button>
+                    </div>
+                </div>
+                <h1 class="p-4 text-left anton border-l-[20px] border-white  text-[160px] leading-[149px]">POSSIBILITY POWER CONFERENCE</h1>
+            </div>
+        </section>
+    </div>
+
+    <section class="bg-black text-white flex md:flex-row flex-col md:py-40 py-10 px-4 md:px-10">
+        <div>
+            <h1 class="anton text-white text-[84px] leading-[92px] w-[100px]">ABOUT PPC</h1>
+        </div>
+        <div class="flex-1 ">
+            <p class="roboto text-4xl text-[#eeeade] font-light">At our church, your spirit will be uplifted through meaningful worship, deep connections with a caring community, and transformative teachings that empower you to live a life of purpose and grace.</p>
+        </div>
+    </section>
+
+    <section class="bg-gradient-to-b from-[#093650] to-[#141755] md:px-10 px-4 py-2 ">
+        <div class="flex justify-between">
+            <div class="flex justify-center items-center gap-2">
+                <div class="text-lg w-10 aspect-square text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </div>
+                <div class="text-lg w-10 aspect-square text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <div class="text-lg w-10 aspect-square text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+            <div>
+                <p>© T.O Production</p>
+            </div>
+        </div>
+       
+    </section>
+
+
+
 
 
     <script>
