--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RCCG</title>
     <link href="./css/output.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/0a85dbbf01.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
@@ -77,7 +78,7 @@
         <div class="text-center text-white md:w-[800px] w-full md:py-28 py-10 ">
             <div class="flex flex-col items-center gap-6">
                 <h3 class="roboto text-xl tracking-wider font-light">RCCG HIGHER GROUND ASSEMBLY ANNUAL CONFERENCE.</h3>
-                <button class="italic w-fit bg-transparent px-8 py-4 border-2 border-purple-800">GET TICKETS</button>
+                <button class="italic w-fit bg-transparent px-8 py-4 border-2 border-purple-700 p-4">GET TICKETS</button>
             </div>
             <h1 class="p-4 text-left anton border-l-[20px] border-white  text-[160px] leading-[149px]">POSSIBILITY POWER CONFERENCE</h1>
         </div>
@@ -145,9 +146,9 @@
         </div>
     </section>
 
-    <section class="bg-black text-white flex md:flex-row flex-col md:py-40 py-10 px-4 md:px-10">
+    <section class="bg-black text-white flex md:flex-row flex-col gap-10 md:py-40 py-10 px-4 md:px-10">
         <div>
-            <h1 class="anton text-white text-[84px] leading-[92px] w-[200px]">WHAT WILL YOU GET</h1>
+            <h1 class="anton text-white text-[84px] leading-[92px]">WHAT WILL <br> YOU GET</h1>
         </div>
         <div class="flex-1 ">
             <p class="roboto text-4xl text-[#eeeade] font-light">At our church, your spirit will be uplifted through meaningful worship, deep connections with a caring community, and transformative teachings that empower you to live a life of purpose and grace.</p>
@@ -176,26 +177,26 @@
     <div class="bg-black w-full h-32"></div>
     <section class="md:px-20 px-10 py-4 bg-gradient-to-b from-[#093650] to-[#141755]">
         <div>
-            <h1>SPONSORS</h1>
+            <h1 class="anton text-white text-[84px] leading-[92px] text-center">SPONSORS</h1>
         </div>
-        <div class="grid items-center lg:grid-cols-4 md:grid-cols-2 grid-cols-1">
-            <h1>PLATINUM PARTNER</h1>
-            <h1>PLATINUM PARTNER</h1>
-            <h1>SILVER PARTNER</h1>
-            <h1>GOLD PARTNER</h1>
-            <h1>GOLD PARTNER</h1>
-            <h1>GOLD PARTNER</h1>
+        <div class="md:py-20 py-10 text-center grid place-content-center items-center md:gap-20 text-purple-700 p-4 lg:grid-cols-3 md:grid-cols-2 grid-cols-1">
+            <h1 class="border-t-2 border-purple-700 p-4">PLATINUM PARTNER</h1>
+            <h1 class="border-t-2 border-purple-700 p-4">PLATINUM PARTNER</h1>
+            <h1 class="border-t-2 border-purple-700 p-4">SILVER PARTNER</h1>
+            <h1 class="border-t-2 border-purple-700 p-4">GOLD PARTNER</h1>
+            <h1 class="border-t-2 border-purple-700 p-4">GOLD PARTNER</h1>
+            <h1 class="border-t-2 border-purple-700 p-4">GOLD PARTNER</h1>
         </div>
     </section>
     <div class="bg-black w-full h-40"></div>
-    <div class="bg-gradient-to-b from-[#093650] to-[#141755]">
-        <section class=" text-white flex md:flex-row flex-col md:gap-20 md:py-40 py-10 px-4 md:px-10"></section>>
-            <div>
+    <div class="bg-gradient-to-b from-[#093650] to-[#136594]">
+        <section class="flex md:flex-row flex-col md:gap-20 text-white py-4 px-4 md:px-10">
+            <div class="flex-[1]">
                 <h1 class="anton text-white text-[84px] leading-[92px]">THE PLACE</h1>
-                <p class="roboto text-4xl text-[#eeeade] font-ligh">WE ARE ONLINE</p>
+                <p class="roboto text-xl text-[#eeeade] font-light">WE ARE ONLINE</p>
             </div>
-            <div class="flex-1 ">
-                <p class="roboto text-4xl text-[#eeeade] font-light">Everyone can be part of this conference – we’re going virtual! And we will be streaming it on our YouTube</p>
+            <div class="flex-1">
+                <p class="roboto text-3xl text-[#eeeade] font-light">Everyone can be part of this conference – we’re going virtual! And we will be streaming it on our YouTube</p>
             </div>
         </section>
         <section class="flex items-center divide-x-2 divide-white text-white bg-[#141755] bg-opacity-80 p-2">
@@ -207,49 +208,84 @@
             <p class="flex-1 text-center">AUGUST 11-18, 2024</p>
         </section>
         <section class="min-h-screen flex justify-center items-center">
-            <div class="text-center text-white md:w-[800px] w-full md:py-28 py-10 ">
+            <div class="text-center text-white w-full md:py-28 py-10 ">
                 <div class="flex flex-col items-center gap-6">
-                    <h3 class="anton text-white text-[84px] leading-[92px] w-[100px]">BE PART OF THE CONFERENCE</h3>
-                    <p class="roboto text-2xl">Be a Part of Our Community</p>
+                    <h3 class="anton text-white text-[84px] leading-[92px]">BE PART OF THE CONFERENCE</h3>
+                    <p class="roboto text-2xl font-light">Be a Part of Our Community</p>
                     <div class="flex flex-col gap-10">
                         <h3 class="anton text-white text-[84px] leading-[92px] w-[100px]">$0.00</h3>
-                        <button class="italic w-fit bg-transparent px-8 py-4 border-2 border-purple-800">GET TICKETS</button>
+                        <button class="italic w-fit bg-transparent px-8 py-4 border-2 border-purple-700 p-4">GET TICKETS</button>
                     </div>
                 </div>
-                <h1 class="p-4 text-left anton border-l-[20px] border-white  text-[160px] leading-[149px]">POSSIBILITY POWER CONFERENCE</h1>
             </div>
         </section>
     </div>
 
-    <section class="bg-black text-white flex md:flex-row flex-col md:py-40 py-10 px-4 md:px-10">
+    <section class="bg-black text-white flex md:flex-row flex-col gap-10 md:py-40 py-10 px-4 md:px-10">
         <div>
-            <h1 class="anton text-white text-[84px] leading-[92px] w-[100px]">ABOUT PPC</h1>
+            <h1 class="anton text-white text-[84px] leading-[92px]">ABOUT PPC</h1>
         </div>
         <div class="flex-1 ">
-            <p class="roboto text-4xl text-[#eeeade] font-light">At our church, your spirit will be uplifted through meaningful worship, deep connections with a caring community, and transformative teachings that empower you to live a life of purpose and grace.</p>
+            <p class="roboto text-4xl text-[#eeeade] font-light">At our church, we are a beacon of hope, guiding each soul towards spiritual growth, unwavering faith, and a community filled with love, compassion, and purpose.</p>
         </div>
     </section>
 
     <section class="bg-gradient-to-b from-[#093650] to-[#141755] md:px-10 px-4 py-2 ">
-        <div class="flex justify-between">
+        <div class="flex justify-around">
             <div class="flex justify-center items-center gap-2">
-                <div class="text-lg w-10 aspect-square text-[#0a84b7] flex justify-center items-center">
+                <div class="text-lg w-10 aspect-square text-white">
                     <i class="fa-brands fa-facebook-f"></i>
                 </div>
-                <div class="text-lg w-10 aspect-square text-[#0a84b7] flex justify-center items-center">
+                <div class="text-lg w-10 aspect-square text-white">
                     <i class="fa-brands fa-youtube"></i>
                 </div>
-                <div class="text-lg w-10 aspect-square text-[#0a84b7] flex justify-center items-center">
+                <div class="text-lg w-10 aspect-square text-white">
                     <i class="fa-brands fa-instagram"></i>
                 </div>
             </div>
-            <div>
+            <div class="text-white">
                 <p>© T.O Production</p>
             </div>
         </div>
        
     </section>
 
+    <section class="bg-black py-10 px-2">
+        <h2 class="roboto text-[#333] text-3xl my-2">Leave a Reply</h2>
+        <p class="text-[#333] text-sm my-2">Your email address will not be published. Required fields are marked *</p>
+        <form class="text-slate-100 flex flex-col gap-4">
+            <label class="text-[#333] text-lg">Comment *
+                <textarea name="" id="" class="text-black h-[200px] w-full resize-none p-2"></textarea>
+            </label>
+            <label class="text-[#333] text-lg">Name *
+                <input type="text" class="text-black h-14 md:h-20 w-full">
+            </label>
+            <label class="text-[#333] text-lg">Email *
+                <input type="text" class="text-black h-14 md:h-20 w-full">
+            </label>
+            <label class="text-[#333] text-lg">Website *
+                <input type="text" class="text-black h-14 md:h-20 w-full">
+            </label>
+            <button class="w-fit p-4 border-2 border-purple-700 text-purple-700 bg-transparent">Post Comment</button>
+        </form>
+    </section>
+
+    <footer class="bg-[#00091f] py-6 px-10">
+        <div class="flex flex-col gap-2 text-center text-[#b3adad]">
+            <p class="text-[13px] leading-[13px]">Copyright 2024 RCCG Higher Ground Assembly. Baltimore, MD. All rights reserved.</p>
+            <div class="flex justify-center items-center gap-2">
+                <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-facebook-f"></i>
+                </div>
+                <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+                <div class="text-lg w-10 aspect-square rounded-full bg-white text-[#0a84b7] flex justify-center items-center">
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
