--- a/about.html
+++ b/about.html
@@ -255,18 +255,18 @@
         <p class="text-[#333] text-sm my-2">Your email address will not be published. Required fields are marked *</p>
         <form class="text-slate-100 flex flex-col gap-4">
             <label class="text-[#333] text-lg">Comment *
-                <textarea name="" id="" class="text-black h-[200px] w-full resize-none p-2"></textarea>
+                <textarea name="" id="" class="text-black h-[200px] w-full resize-none p-2 rounded-sm"></textarea>
             </label>
             <label class="text-[#333] text-lg">Name *
-                <input type="text" class="text-black h-14 md:h-20 w-full">
+                <input type="text" class="text-black h-14 pl-2 rounded-sm w-full">
             </label>
             <label class="text-[#333] text-lg">Email *
-                <input type="text" class="text-black h-14 md:h-20 w-full">
+                <input type="text" class="text-black h-14 pl-2 rounded-sm w-full">
             </label>
             <label class="text-[#333] text-lg">Website *
-                <input type="text" class="text-black h-14 md:h-20 w-full">
+                <input type="text" class="text-black h-14 pl-2 rounded-sm w-full">
             </label>
-            <button class="w-fit p-4 border-2 border-purple-700 text-purple-700 bg-transparent">Post Comment</button>
+            <button class="w-fit p-4 border-2 border-purple-700 text-purple-700 hover:text-white hover:bg-purple-700 bg-transparent duration-300">Post Comment</button>
         </form>
     </section>
 
