--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
         <p class="flex-1 text-center">PPC2024</p>
         <p class="flex-1 text-center">AUGUST 11-18, 2024</p>
     </section>
-    <section class="flex md:flex-row flex-col gap-10 md:py-32 px-2 md:px-20 py-2">
+    <section class="flex md:flex-row flex-col gap-10 md:py-32 px-2 md:px-20 py-2 overflow-hidden">
         <div class="flex-1">
             <img src="./images/slide3.jpg" loading="lazy" class="w-full h-[400px] object-cover object-bottom" alt="">
         </div>
-        <div class="flex-1 flex flex-col items-center md:items-start justify-between h-[700px] bg-[#424242] px-8 py-6 md:text-left text-center">
+        <div data-aos="flip-right" data-aos-once="true" class="flex-1 flex flex-col items-center md:items-start justify-between h-[700px] bg-[#424242] px-8 py-6 md:text-left text-center">
             <div>
                 <h1 class="font-medium text-2xl md:text-3xl text-white fjalla">Welcome to Higher Ground Assembly</h1>
                 <p class="text-[24px] leading-[45px] font-light text-[#c3c3c3]">Permit me to welcome you to this entrance to information about Higher Ground Assembly, a parish of the Redeemed Christian Church of God worldwide. Ours is a growing Church made of friendly, caring and happy people. We are determined to keep pressing until your God-given potential turns to reality</p>
