--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Spinner End -->
 
         <!-- Topbar Start -->
-        <div class="container-fluid bg-dark py-2 d-none d-md-flex">
+        <!-- <div class="container-fluid bg-dark py-2 d-none d-md-flex">
             <div class="container">
                 <div class="d-flex justify-content-between topbar">
                     <div class="top-info">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Topbar End -->
 
         <!-- Navbar Start -->
@@ -60,12 +60,16 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-white fw-bold d-block">High<span class="text-secondary">Tech</span> </h1>
+                        <!-- <h1 class="text-white fw-bold d-block">High<span class="text-secondary">Tech</span> </h1> -->
+                        HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
+                        <p class="text-xs italic text-[#515b6b]">
+                            Pressing Forward... Making Potentials Real
+                        </p>
                     </a>
                     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
+                    <!-- <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
                         <div class="navbar-nav ms-auto mx-xl-auto p-0">
                             <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
@@ -99,7 +103,7 @@
                         <div class="d-flex align-items-center justify-content-center ms-4 ">
                             <a href="#"><i class="bi bi-search text-white fa-2x"></i> </a>
                         </div>
-                    </div>
+                    </div> -->
                 </nav>
             </div>
         </div>
@@ -117,9 +121,8 @@
                         <img src="img/carousel-1.jpg" class="img-fluid" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h6 class="text-secondary h4 animated fadeInUp">Best IT Solutions</h6>
-                                <h1 class="text-white display-1 mb-4 animated fadeInRight">An Innovative IT Solutions Agency</h1>
-                                <p class="mb-4 text-white fs-5 animated fadeInDown">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Pellentesque aliquam dolor eget urna ultricies tincidunt.</p>
+                                <h6 class="text-secondary h4 animated fadeInUp">Possibility Power Conference 2024</h6>
+                                <h1 class="text-white display-1 mb-4 animated fadeInRight">Seeds of Greatness </p>
                                 <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
@@ -129,9 +132,9 @@
                         <img src="img/carousel-2.jpg" class="img-fluid" alt="Second slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h6 class="text-secondary h4 animated fadeInUp">Best IT Solutions</h6>
-                                <h1 class="text-white display-1 mb-4 animated fadeInLeft">Quality Digital Services You Really Need!</h1>
-                                <p class="mb-4 text-white fs-5 animated fadeInDown">Lorem ipsum dolor sit amet elit. Sed efficitur quis purus ut interdum. Pellentesque aliquam dolor eget urna ultricies tincidunt.</p>
+                                <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6>
+                                <h1 class="text-white display-1 mb-4 animated fadeInLeft">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</h1>
+                                <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
                                 <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
@@ -153,7 +156,7 @@
 
         <!-- Fact Start -->
         <div class="container-fluid bg-secondary py-5">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
                         <div class="d-flex counter">
@@ -180,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- Fact End -->
 
@@ -211,7 +214,7 @@
 
 
         <!-- Services Start -->
-        <div class="container-fluid services py-5 mb-5">
+        <!-- <div class="container-fluid services py-5 mb-5">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <h5 class="text-primary">Our Services</h5>
@@ -293,7 +296,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Services End -->
 
 
@@ -308,11 +311,12 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/project-1.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/pastor1.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Web design</h4>
-                                        <p class="m-0 text-white">Web Analysis</p>
+                                        <h4 class="text-secondary">Pastor Ayo Olulana</h4>
+                                        <p class="m-0 text-white">SENIOR PASTOR
+                                            RCCG HIGHER GROUND ASSEMBLY</p>
                                     </a>
                                 </div>
                             </div>
@@ -321,11 +325,12 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/project-2.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/pastor2.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Cyber Security</h4>
-                                        <p class="m-0 text-white">Cyber Security Core</p>
+                                        <h4 class="text-secondary">Pastor Remi Olulana</h4>
+                                        <p class="m-0 text-white">SENIOR PASTOR
+                                            RCCG HIGHER GROUND ASSEMBLY</p>
                                     </a>
                                 </div>
                             </div>
@@ -334,11 +339,12 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/project-3.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/pastor3.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Mobile Info</h4>
-                                        <p class="m-0 text-white">Upcomming Phone</p>
+                                        <h4 class="text-secondary">Pastor Bayo Adewole</h4>
+                                        <p class="m-0 text-white">SENIOR PASTOR
+                                            RCCG JESUS HOUSE CHICAGO</p>
                                     </a>
                                 </div>
                             </div>
@@ -347,11 +353,12 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/project-4.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/pastor4.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Web Development</h4>
-                                        <p class="m-0 text-white">Web Analysis</p>
+                                        <h4 class="text-secondary">Pastor Bayo Adeyokunnu</h4>
+                                        <p class="m-0 text-white">SENIOR PASTOR
+                                            RCCG VICTORY TEMPLE BOWIE</p>
                                     </a>
                                 </div>
                             </div>
@@ -360,11 +367,12 @@
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
                         <div class="project-item">
                             <div class="project-img">
-                                <img src="img/project-5.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/pastor5.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Digital Marketing</h4>
-                                        <p class="m-0 text-white">Marketing Analysis</p>
+                                        <h4 class="text-secondary">Pastor Funmi Obilana</h4>
+                                        <p class="m-0 text-white">SENIOR PASTOR
+                                            RCCG LIVING SPRING MIRACLE CENTER</p>
                                     </a>
                                 </div>
                             </div>
@@ -372,7 +380,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                         <div class="project-item">
-                            <div class="project-img">
+                            <!-- <div class="project-img">
                                 <img src="img/project-6.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
@@ -380,7 +388,7 @@
                                         <p class="m-0 text-white">keyword Analysis</p>
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -390,7 +398,7 @@
 
 
         <!-- Blog Start -->
-        <div class="container-fluid blog py-5 mb-5">
+        <!-- <div class="container-fluid blog py-5 mb-5">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <h5 class="text-primary">Our Blog</h5>
@@ -492,12 +500,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Blog End -->
 
 
         <!-- Team Start -->
-        <div class="container-fluid py-5 mb-5 team">
+        <!-- <div class="container-fluid py-5 mb-5 team">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <h5 class="text-primary">Our Team</h5>
@@ -582,11 +590,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Team End -->
 
         <!-- Testimonial Start -->
-        <div class="container-fluid testimonial py-5 mb-5">
+        <!-- <div class="container-fluid testimonial py-5 mb-5">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <h5 class="text-primary">Our Testimonial</h5>
@@ -679,7 +687,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Testimonial End -->
 
